# llm-workflows

./: .gitignore  cluster_visualizer.py  docker-compose.yml  eslint.config.js  hdbscan_tuning_guide.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  visualization_ideas.md
apps/llm-workflows-client/: package.json
apps/text-filter-client/: package.json  pnpm-lock.yaml
docs/: gpu_optimization_notes.md  recommendations.md  training_logs_explained.md
fine-tune/: fine_tune_gemma.py  requirements.txt  run_inference.py  start_training.sh
models/: image_description.py  text_embedder.py
python/: cluster_visualizer.py  requirements.txt
src/: cluster_visualizer.py  config.py  config.ts  consts.py  countRecords.ts  count_json_records.py  create_labeled_data.py  database.py  emb.py  embedding.ts  embeddings.py  exportEmbeddings.ts  filter_milvus_collection.py  hdbscan_visualizer.py  index.js  index.ts  models.py  parse.js  parse.ts  populate_image_descriptions_db.py  process_tg_data.py  rag_search.py  router.py  schemas.py  search.js  search.ts  server.py  server.ts  telegram.ts  textIndexer.ts  upsample_labeled_data.py
src/db/: db.py
src/embeddings/: embeddings.py  populate_image_descriptions.py  vector_search.py
src/fine_tune/: create_labeled_data.py  upsample_labeled_data.py
src/llm/: __init__.py  image_description.py  openai_embedder.py
src/models/: __init__.py  image_description.py  text_embedder.py
src/parsers/: parse_raw_telegram_data.py
src/pkg/: telegram_schemas.py
tg_parsing/: data.py  parser.py  types.py
(+83 files in other folders)
