[project]
name = "llm-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "ijson>=3.4.0",
    "pillow>=11.3.0",
    "pymilvus>=2.6.0",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.55.4",
]
